Fix clicking on mobile
Disable pointer events for the hidden full-page header when the menu is
closed

--- a/_sass/_config.scss
+++ b/_sass/_config.scss
@@ -41,6 +41,12 @@ $sm-background-opacity: 0.3;
   }
 }
 
+@mixin mediaDesktop {
+  @media (min-width: 768px) {
+    @content;
+  }
+}
+
 // Media query mixins
 @mixin mediaSm {
   @media screen and (max-width: 500px) {
