--- a/_sass/_menu.scss
+++ b/_sass/_menu.scss
@@ -6,6 +6,11 @@ header {
   width: 100%;
   height: 100%;
   overflow: scroll;
+  pointer-events: none;
+
+  @include mediaDesktop {
+    pointer-events: auto;
+  }
 
   nav.navbar {
     opacity: 0.9;
@@ -53,6 +58,7 @@ header {
       border: 0;
       width: 0;
       height: 0;
+      pointer-events: auto;
 
       div.menu-button {
         position: absolute;
@@ -79,6 +85,7 @@ header {
     }
 
     &.open-mobile {
+      pointer-events: initial;
       & > button.navbar-toggle div.menu-button {
         transform: rotate(180deg);
         .btn-line {
@@ -122,7 +129,7 @@ header {
     }
   }
 
-  @media (min-width: 768px) {
+  @include mediaDesktop {
     overflow: initial;
 
     .nav li a {
